re-instate CometdBenchmarkTest
Signed-off-by: Ludovic Orban <lorban@bitronix.be>